# PDF-Tools-Volaris

./: .dockerignore  .gitignore  Dockerfile  MODAL_DEPLOYMENT.md  README.md  app.py  docker-compose.yml  main.py  modal_app.py  packages.txt  pdf_extractor_gui.py  pyproject.toml  requirements.txt  run_flask_gpu.py  start.sh  streamlit_app.py
output/NEJMoa2504214 - Clinical Trial/: NEJMoa2504214 - Clinical Trial.md  NEJMoa2504214 - Clinical Trial_content_list.json
static/css/: styles.css
static/js/: app.js
templates/: index.html
