[project]
name = "pdf-minor-allegations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "doclayout-yolo>=0.0.4",
    "huggingface-hub>=1.1.2",
    "loguru>=0.7.3",
    "pillow>=12.0.0",
    "pymupdf>=1.26.6",
    "pypdfium2>=5.0.0",
]
