[project]
name = "pdf-minor-allegations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "doclayout-yolo>=0.0.4",
    "huggingface-hub>=1.1.2",
    "loguru>=0.7.3",
    "pillow>=12.0.0",
    "pymupdf>=1.26.6",
    "pymupdf-layout>=0.0.15",
    "pypdfium2>=5.0.0",
    "pymupdf4llm>=0.1.9",
    "flask>=3.0.0",
    "werkzeug>=3.0.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]
